@@ -15,7 +15,7 @@
 \newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
 \newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}
 
-\section{Changes in CHNOSZ version 2.1.0-48 (2025-04-07)}{
+\section{Changes in CHNOSZ version 2.1.0-53 (2025-04-21)}{
 
   \subsection{OBIGT DEFAULT DATA}{
     \itemize{
@@ -136,6 +136,14 @@
     }
   }
 
+  \subsection{BUG FIXES}{
+    \itemize{
+
+      \item Fix using Eh in transect mode of \code{affinity()} (feature was not
+      working since at least version 0.9-7).
+
+    }
+  }
 
   \subsection{OTHER CHANGES}{
     \itemize{
